# cra-scheduler-env

./: .gitignore  README.md  __init__.py  app.py  client.py  distances.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: Dockerfile  __init__.py  environment.py  inference.py  solver.py
